# BlackHoleInC

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/BlackHole/: blackhole.h  blackhole1.h  blackhole2.h
src/Common/: blackhole_math.h  blackhole_util.h  init_header.h  run_terminal.h  util.h
src/Common/Math/: math_utils.c  math_utils.h
src/Mat/: mat3.h
src/Math/: blackhole.h  color.h  common.h  geodesic.h  mat3.h  mat4.h  noise.h  tensor.h  tetrad.h  util.h  vec2.h  vec3.h  vec4.h
src/Math/Mat/: mat3.h  mat4.h  matmn.h
src/Math/Tensor/: geodesic.h  tensor.h  tetrad.h
src/Math/Vec/: vec2.h  vec3.h  vec4.h  vecn.h
src/SDL/: init.h  objects.h  render.h
src/Term/: run.h
src/Vec/: vec2.h  vec3.h  vec4.h
test/: CMakeLists.txt  main.c  tensor.c  test_tensor.c
test/BlackHole/: blackhole2.c
test/Mat/: mat3.c  mat4.c
test/Tensor/: geodesic.c  tensor.c  tetrad.c
test/Vec/: vec2.c  vec3.c  vec4.c
